Fixes issue where add comment bubble is offscreen in Firefox.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -143,6 +143,7 @@ ul {
   margin: 1em 0;
   border: 1px solid #cdcdcd;
   background: #fdfdfd;
+  position: relative;
 }
 
 .box>div {
